fixed vertical align

--- a/gwt-d3-ui/src/main/java/com/github/gwtd3/ui/Slider.css
+++ b/gwt-d3-ui/src/main/java/com/github/gwtd3/ui/Slider.css
@@ -1,5 +1,5 @@
 .svg.slider{
-	
+	vertical-align: middle;
 }
 
 .rule{
